terraformcode/main.tf


# Data source for AMI id
data "aws_ami" "latest_amazon_linux" {
  owners      = ["amazon"]
  most_recent = true
  filter {
    name   = "name"
    values = ["amzn2-ami-hvm-*-x86_64-gp2"]
  }
}


# # Data source for availability zones in us-east-1
# data "aws_availability_zones" "available" {
#   state = "available"
# }


# Reference subnet provisioned by 01-Networking 
resource "aws_instance" "my_amazon" {
  ami                         = data.aws_ami.latest_amazon_linux.id
  instance_type               = "t2.micro"
  key_name                    = aws_key_pair.web_key.key_name
  subnet_id                   = aws_subnet.public_subnet_2.id
  security_groups             = [aws_security_group.web_sg.id]
  associate_public_ip_address = true
  # user_data                   = file("${path.module}/install_httpd.sh")

  lifecycle {
    create_before_destroy = true
  }
}

# Adding SSH key to Amazon EC2
resource "aws_key_pair" "web_key" {
  key_name   = "sweta"
  public_key = file("sweta.pub")
}

resource "aws_ecr_repository" "cat" {
 
 name = "Assignment1_cat"

}

resource "aws_ecr_repository" "dog" {
 
 name = "Assignment1_dog"

}
